# speedy

./: .gitignore  README.md  pyproject.toml
speedy/: main.py  test.py  text_generator_service.py
static/js/: ws_connection.js
templates/: base.html  index.html
